--- a/_posts/python/ternary/ternary2examples.ipynb
+++ b/_posts/python/ternary/ternary2examples.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -113,22 +113,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"68cf93a7-0d37-45ad-a720-9b14be0feef7\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"68cf93a7-0d37-45ad-a720-9b14be0feef7\", [{\"a\": [75, 70, 75, 5, 10, 10, 20, 10, 15, 10, 20], \"c\": [0, 20, 5, 35, 10, 0, 10, 70, 80, 80, 70], \"b\": [25, 10, 20, 60, 80, 90, 70, 20, 5, 10, 10], \"text\": [\"point 1\", \"point 2\", \"point 3\", \"point 4\", \"point 5\", \"point 6\", \"point 7\", \"point 8\", \"point 9\", \"point 10\", \"point 11\"], \"mode\": \"markers\", \"marker\": {\"color\": \"#DB7365\", \"symbol\": 100, \"line\": {\"width\": 2}, \"size\": 14}, \"type\": \"scatterternary\"}], {\"annotations\": [{\"y\": 1.3, \"text\": \"Simple Ternary Plot with Markers\", \"font\": {\"size\": 15}, \"showarrow\": false, \"x\": 0.5}], \"ternary\": {\"sum\": 100, \"baxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Developer\", \"tickangle\": 45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"caxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Designer\", \"tickangle\": -45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"aaxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"Journalist\", \"tickangle\": 0, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "from plotly.offline import init_notebook_mode, iplot, plot\n",
     "import plotly.graph_objs as go\n",
-    "init_notebook_mode()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "init_notebook_mode()\n",
+    "\n",
     "rawData = [\n",
     "    {'journalist':75,'developer':25,'designer':0,'label':'point 1'},\n",
     "    {'journalist':70,'developer':10,'designer':20,'label':'point 2'},\n",
@@ -141,17 +144,8 @@
     "    {'journalist':15,'developer':5,'designer':80,'label':'point 9'},\n",
     "    {'journalist':10,'developer':10,'designer':80,'label':'point 10'},\n",
     "    {'journalist':20,'developer':10,'designer':70,'label':'point 11'},\n",
-    "];"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "];\n",
+    "\n",
     "def makeAxis(title, tickangle): \n",
     "    return {\n",
     "      'title': title,\n",
@@ -162,41 +156,23 @@
     "      'ticklen': 5,\n",
     "      'showline': True,\n",
     "      'showgrid': True\n",
-    "    }\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "    }\n",
+    "\n",
     "data = [{ \n",
     "    'type': 'scatterternary',\n",
     "    'mode': 'markers',\n",
-    "    'a': map(lambda x: x['journalist'], rawData),\n",
-    "    'b': map(lambda x: x['developer'], rawData),\n",
-    "    'c': map(lambda x: x['designer'], rawData),\n",
-    "    'text': map(lambda x: x['label'], rawData),\n",
+    "    'a': [i for i in map(lambda x: x['journalist'], rawData)],\n",
+    "    'b': [i for i in map(lambda x: x['developer'], rawData)],\n",
+    "    'c': [i for i in map(lambda x: x['designer'], rawData)],\n",
+    "    'text': [i for i in map(lambda x: x['label'], rawData)],\n",
     "    'marker': {\n",
     "        'symbol': 100,\n",
     "        'color': '#DB7365',\n",
     "        'size': 14,\n",
     "        'line': { 'width': 2 }\n",
     "    },\n",
-    "    }]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "    }]\n",
+    "\n",
     "layout = {\n",
     "    'ternary': {\n",
     "        'sum': 100,\n",
@@ -209,44 +185,12 @@
     "      'text': 'Simple Ternary Plot with Markers',\n",
     "        'x': 0.5,\n",
     "        'y': 1.3,\n",
-    "        'font': { 'size': 15 }\n",
+    "        'font': {'size': 15}\n",
     "    }]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fig = {'data': data, 'layout': layout}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"f5ff590e-d251-4c3c-97b5-d7c1645bd9b8\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f5ff590e-d251-4c3c-97b5-d7c1645bd9b8\", [{\"a\": [75, 70, 75, 5, 10, 10, 20, 10, 15, 10, 20], \"c\": [0, 20, 5, 35, 10, 0, 10, 70, 80, 80, 70], \"b\": [25, 10, 20, 60, 80, 90, 70, 20, 5, 10, 10], \"text\": [\"point 1\", \"point 2\", \"point 3\", \"point 4\", \"point 5\", \"point 6\", \"point 7\", \"point 8\", \"point 9\", \"point 10\", \"point 11\"], \"mode\": \"markers\", \"marker\": {\"color\": \"#DB7365\", \"symbol\": 100, \"line\": {\"width\": 2}, \"size\": 14}, \"type\": \"scatterternary\"}], {\"annotations\": [{\"y\": 1.3, \"text\": \"Simple Ternary Plot with Markers\", \"font\": {\"size\": 15}, \"showarrow\": false, \"x\": 0.5}], \"ternary\": {\"sum\": 100, \"baxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Developer\", \"tickangle\": 45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"caxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Designer\", \"tickangle\": -45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"aaxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"Journalist\", \"tickangle\": 0, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "iplot(fig, validate=False)"
+    "}\n",
+    "\n",
+    "fig = {'data': data, 'layout': layout}\n",
+    "iplot(fig, validate=False)\n"
    ]
   },
   {
@@ -447,19 +391,19 @@
     }
    ],
    "source": [
-    "from IPython.display import display, HTML\n",
+    "# from IPython.display import display, HTML\n",
     "\n",
-    "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
-    "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
+    "# display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
+    "# display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install publisher --upgrade\n",
-    "import publisher\n",
-    "publisher.publish(\n",
-    "    'ternary.ipynb', 'python/ternary-plots/', 'Python Ternary Plots | plotly',\n",
-    "    'How to make Ternary plots in Python with Plotly.',\n",
-    "    name = 'Ternary',\n",
-    "    thumbnail='thumbnail/ternary.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='scientific', order=32)  "
+    "# ! pip install publisher --upgrade\n",
+    "# import publisher\n",
+    "# publisher.publish(\n",
+    "#     'ternary.ipynb', 'python/ternary-plots/', 'Python Ternary Plots | plotly',\n",
+    "#     'How to make Ternary plots in Python with Plotly.',\n",
+    "#     name = 'Ternary',\n",
+    "#     thumbnail='thumbnail/ternary.jpg', language='python',\n",
+    "#     page_type='example_index', has_thumbnail='true', display_as='scientific', order=32)  "
    ]
   },
   {
