getting started edits

--- a/_posts/ggplot2/getting-started/2015-08-10-getting-started_ggplot2_index.Rmd
+++ b/_posts/ggplot2/getting-started/2015-08-10-getting-started_ggplot2_index.Rmd
@@ -4,7 +4,7 @@ name: Getting Started with Plotly and ggplot2
 permalink: ggplot2/getting-started/
 description: Get started with Plotly's R graphing library with ggplot2 to make interactive, publication-quality graphs online.
 page_type: example_index
-layout: base
+layout: getstart
 language: ggplot2
 ---
 
