re-ran notebook, hoping it gets loaded into gh-pages

--- a/_posts/python/3d-surface-coloring/3d_surface_coloring.ipynb
+++ b/_posts/python/3d-surface-coloring/3d_surface_coloring.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
        "'1.9.9'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -60,8 +60,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "300\n",
-      "300\n",
       "This is the format of your plot grid:\n",
       "[ (1,1) scene1 ]  [ (1,2) scene2 ]\n",
       "\n"
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +182,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -230,20 +228,6 @@
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning:\n",
-      "\n",
-      "Your URL has more than 2 parts... are you sure?\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -261,6 +245,15 @@
     "    thumbnail='thumbnail/3d-scatter.jpg', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='3d_charts', order=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
