--- a/_posts/python/ternary/ternary.ipynb
+++ b/_posts/python/ternary/ternary.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ternary Plots in Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Learn about API authentication here: https://plot.ly/python/getting-started\n",
     "<br>Find your api_key here: https://plot.ly/settings/api"
    ]
@@ -42,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Basic Tenary Plot with Markers"
+    "### Basic Ternary Plot with Markers"
    ]
   },
   {
@@ -110,7 +103,7 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"6caeeb46-facd-439c-8072-099df45fb991\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6caeeb46-facd-439c-8072-099df45fb991\", [{\"a\": [75, 70, 75, 5, 10, 10, 20, 10, 15, 10, 20], \"c\": [0, 20, 5, 35, 10, 0, 10, 70, 80, 80, 70], \"b\": [25, 10, 20, 60, 80, 90, 70, 20, 5, 10, 10], \"text\": [\"point 1\", \"point 2\", \"point 3\", \"point 4\", \"point 5\", \"point 6\", \"point 7\", \"point 8\", \"point 9\", \"point 10\", \"point 11\"], \"mode\": \"markers\", \"marker\": {\"color\": \"#DB7365\", \"symbol\": 100, \"line\": {\"width\": 2}, \"size\": 14}, \"type\": \"scatterternary\"}], {\"annotations\": [{\"y\": 1.3, \"text\": \"Simple Ternary Plot with Markers\", \"font\": {\"size\": 15}, \"showarrow\": false, \"x\": 0.5}], \"ternary\": {\"sum\": 100, \"baxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Developer\", \"tickangle\": 45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"caxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Designer\", \"tickangle\": -45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"aaxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"Journalist\", \"tickangle\": 0, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"50b61b0d-aeee-4211-80fa-3b75a5537ecf\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"50b61b0d-aeee-4211-80fa-3b75a5537ecf\", [{\"a\": [75, 70, 75, 5, 10, 10, 20, 10, 15, 10, 20], \"c\": [0, 20, 5, 35, 10, 0, 10, 70, 80, 80, 70], \"b\": [25, 10, 20, 60, 80, 90, 70, 20, 5, 10, 10], \"text\": [\"point 1\", \"point 2\", \"point 3\", \"point 4\", \"point 5\", \"point 6\", \"point 7\", \"point 8\", \"point 9\", \"point 10\", \"point 11\"], \"mode\": \"markers\", \"marker\": {\"color\": \"#DB7365\", \"symbol\": 100, \"line\": {\"width\": 2}, \"size\": 14}, \"type\": \"scatterternary\"}], {\"annotations\": [{\"y\": 1.3, \"text\": \"Simple Ternary Plot with Markers\", \"font\": {\"size\": 15}, \"showarrow\": false, \"x\": 0.5}], \"ternary\": {\"sum\": 100, \"baxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Developer\", \"tickangle\": 45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"caxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"<br>Designer\", \"tickangle\": -45, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}, \"aaxis\": {\"tickfont\": {\"size\": 15}, \"title\": \"Journalist\", \"tickangle\": 0, \"ticklen\": 5, \"showgrid\": true, \"titlefont\": {\"size\": 20}, \"showline\": true, \"tickcolor\": \"rgba(0,0,0,0)\"}}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -221,9 +214,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\n",
-      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\r\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
      ]
     },
     {
@@ -252,10 +245,19 @@
     "publisher.publish(\n",
     "    'ternary.ipynb', 'python/ternary-plots/', 'Python Ternary Plots | plotly',\n",
     "    'How to make Ternary plots in Python with Plotly.',\n",
-    "    name = 'Ternary',\n",
+    "    name = 'Ternary Plots',\n",
     "    thumbnail='thumbnail/ternary.jpg', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='scientific', order=32)  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
