--- a/_posts/user_guide_python/new_py_guide.ipynb
+++ b/_posts/user_guide_python/new_py_guide.ipynb
@@ -11,20 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So you've just finished the `Getting Started document` and now you're looking to find out more. In this guide, we're going to go through some of the internals of Plotly, as well as some tips and general practices that will allow you generate amazing data visualizations in no time."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Sections:\n",
-    "\n",
-    "- What is Plotly?!\n",
-    "- Working with the Python API\n",
-    "- Looking at Examples\n",
-    "- Using the Reference Page\n",
-    "- Issues and Questions"
+    "So you've just finished the [`Getting Started document`](https://plot.ly/python/getting-started) and now you're looking to find out more. In this guide, we'll go through some of the internals of Plotly, as well as some tips and general practices that will allow you generate amazing data visualizations in no time."
    ]
   },
   {
@@ -33,12 +20,12 @@
    "source": [
     "### What is Plotly?:\n",
     "\n",
-    "Plotly at its core is a data visualization toolbox. Under every plotly graph is a JSON, a dictionary like data structure, and simply by changing the values of some keywords, we can get vastly different and ever more detailed plots. For example:"
+    "Plotly at its core is a data visualization toolbox. Under every plotly graph is a JSON object, which is a dictionary like data structure. Simply by changing the values of some keywords in this object, we can get vastly different and ever more detailed plots. For example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +39,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +79,7 @@
        "  'yaxis': {'title': 'x2'}}}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +113,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "More over, Plotly plots are interactive, meaning you can manually explore the data by panning, selecting, zooming on the graphing surface (among other possible actions, try panning the axes!). We are also continually expanding the expressiveness of the Plotly package so we're able to graph and visualize all sorts of data. "
+    "Moreover, Plotly plots are interactive, meaning you can manually explore the data by panning, selecting, zooming on the graphing surface (among other possible actions, try panning the axes!). We are also continually expanding the expressiveness of the Plotly package so we're able to graph and visualize all sorts of data. "
    ]
   },
   {
@@ -149,9 +136,9 @@
     "collapsed": true
    },
    "source": [
-    "####The Source of Plotly's Power\n",
+    "#### The Source of Plotly's Power\n",
     "\n",
-    "All the graphs and plots which Plotly generates are actually the product of our javascript library `Plotly.js`. Whether you see Plotly graphs in a browser, or an IPython notebook, all the visualizations and interactiveness is made possible by `Plotly.js`."
+    "All the graphs and plots which Plotly generates are actually the product of our javascript library `Plotly.js`. Whether you see Plotly graphs in a browser, or an IPython notebook, all the visualizations and interactiveness is made possible by `Plotly.js`. Built on top of `d3.js` and `stack.gl`, `plotly.js` is a high-level, declarative charting library. `plotly.js` ships with 20 chart types, including 3D charts, statistical graphs, and SVG maps. "
    ]
   },
   {
@@ -170,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -211,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +215,7 @@
        "  'y': [4, 5, 6]}]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -263,7 +250,7 @@
        " 'y': [4, 5, 6]}"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +285,7 @@
        "        0.84672005])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +325,7 @@
        "          0.84672005])}]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -365,7 +352,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -402,7 +389,7 @@
        "{'title': 'First Plot', 'xaxis': {'title': 'x1'}, 'yaxis': {'title': 'x2'}}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -436,7 +423,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -498,7 +485,7 @@
        "  'yaxis': {'title': 'x2'}}}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -832,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -1092,7 +1079,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, calling help will shows us all the attributes that the Scatter object takes as paremeters. Also because the scatter object is just a dictionary at heart, you can see all the different methods that are attached to this object as well. For example, we've seen the use of the `update` method above."
+    "As you can see, calling help shows us all the attributes that the Scatter object takes as paremeters. Also because the scatter object is based off of a dictionary, you can see all the different methods that are attached to this object as well. For example, we've seen the use of the `update` method above."
    ]
   },
   {
@@ -1104,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -1116,7 +1103,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mPlotlyDictKeyError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-105-f20e7994a2f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-52-f20e7994a2f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/graph_objs/graph_objs.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    373\u001b[0m         \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    374\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 375\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__setitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_raise\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_raise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    376\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    377\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/graph_objs/graph_objs.pyc\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value, _raise)\u001b[0m\n\u001b[1;32m    424\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0m_raise\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m                     \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 426\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPlotlyDictKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    427\u001b[0m                 \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mPlotlyDictKeyError\u001b[0m: 'markers' is not allowed in 'scatter'\n\nPath To Error: ['markers']\n\nValid attributes for 'scatter' at path [] under parents []:\n\n    ['textposition', 'uid', 'stream', 'ysrc', 'hoverinfo', 'xsrc',\n    'visible', 'marker', 'y0', 'tsrc', 'line', 'fill', 'showlegend',\n    'error_x', 'error_y', 'rsrc', 'xaxis', 'text', 'type', 't', 'opacity',\n    'textfont', 'legendgroup', 'textpositionsrc', 'textsrc', 'dx', 'dy',\n    'x0', 'name', 'yaxis', 'connectgaps', 'r', 'mode', 'y', 'x',\n    'fillcolor']\n\nRun `<scatter-object>.help('attribute')` on any of the above.\n'<scatter-object>' is the object at []"
@@ -1220,7 +1207,7 @@
     "\n",
     "It's a good place to look for what's possible in Plotly. A brief look at the page you can find sections and examples on types of plots you didn't know existed, or layout options that you had no idea were possible and within reach. Just take a look at all these guys:\n",
     "\n",
-    "![Scientific Charts](https://cloud.githubusercontent.com/assets/12302455/14262495/cd45bc98-fa83-11e5-9d4b-7a49acd37252.png)\n"
+    "[![Scientific Charts](https://cloud.githubusercontent.com/assets/12302455/14262495/cd45bc98-fa83-11e5-9d4b-7a49acd37252.png)](https://plot.ly/python)\n"
    ]
   },
   {
@@ -1229,7 +1216,7 @@
    "source": [
     "What's more you can find layout options that will allow you to create plots with multiple axes and plots.\n",
     "Check this out:\n",
-    "![Layout Options](https://cloud.githubusercontent.com/assets/12302455/14262589/51792702-fa84-11e5-8e3a-b606a0211838.png)\n",
+    "[![Layout Options](https://cloud.githubusercontent.com/assets/12302455/14262589/51792702-fa84-11e5-8e3a-b606a0211838.png)](https://plot.ly/python/#layout-options)\n",
     "\n"
    ]
   },
@@ -1254,7 +1241,7 @@
     "\n",
     "When you first load the page you will see a menu on the left which is segregated into `Plot Objects` and `Layout`. This exemplifies the two components of every Plotly figure. So for example if you knew you wanted to change something related to the visualization of the data, then you would look at the first section. If instead you were interested in a general aesthetic feature of the graph then the Layout will probably be your best option.\n",
     "\n",
-    "Now for example, if we decided to create a scatter plot, then we would choose `Scatter` under `Plot Objects`, and that will take you to the the section for `Scatter`. On your immediate right you will be able to see a breakdown of the Scatter section, which includes all the parameters and sub-parameters are your disposal. \n"
+    "Now for example, if you decided to create a scatter plot, then you would choose `Scatter` under `Plot Objects`, and that will take you to the the section for `Scatter`. On your immediate right you will be able to see a breakdown of the Scatter section, which includes all the parameters and sub-parameters at your disposal. \n"
    ]
   },
   {
@@ -1268,19 +1255,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So you've developed a better understanding of Plotly now, and you're starting to create cooler plots and visualizations for different projects you're working on. If you ever happen to get stuck wtih certain use cases or features in Plotly, you can let us know at our **[Community Forums](http://community.plot.ly)**. \n",
+    "So you've developed a better understanding of Plotly now, and you're starting to create cooler plots and visualizations for different projects you're working on. If you ever happen to get stuck with certain use cases or features in Plotly, you can let us know at our **[Community Forums](http://community.plot.ly)**. \n",
     "![Community Support](https://cloud.githubusercontent.com/assets/12302455/14265774/71a43b4a-fa91-11e5-86f8-f069037c74ea.png)\n",
     "Moreover if you sign up for a Pro Plan, we also offer e-mail and intercom support as well. Finally if you think you've caught a bug or if something just doesn't function the way it should, you can create an issue on our **[Github Repo](https://github.com/plotly/plotly.py/issues)**."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1289,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -1335,9 +1313,9 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'new_py_guide.ipynb', 'python/pyguide//', 'Getting Started Plotly for Python',\n",
-    "    'Getting Started with Plotly for Python',\n",
-    "    title = 'Getting Started Plotly for Python',\n",
+    "    'new_py_guide.ipynb', 'python/user-guide//', 'Plotly User Guide for Python',\n",
+    "    'Plotly User Guide for Python',\n",
+    "    name = 'Plotly User Guide',\n",
     "    thumbnail='', language='python',\n",
     "    layout='user-guide', has_thumbnail='false') "
    ]
